--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "FoxWeb - Centro de Descargas",
+  "name": "FoxWeb",
   "short_name": "FoxWeb",
   "description": "Tu centro de descargas confiable para software, sistemas y juegos",
   "start_url": "/",
