--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,57 @@
 {
-  "name": "FoxWeb",
+  "name": "FoxWeb - Centro de Descargas",
   "short_name": "FoxWeb",
+  "description": "Descarga software gratis, sistemas operativos, juegos clásicos y APKs. Enlaces directos y seguros.",
+  "start_url": "/",
+  "scope": "/",
+  "display": "standalone",
+  "orientation": "portrait",
+  "theme_color": "#FF4500",
+  "background_color": "#0c0c0c",
+  "categories": ["utilities", "productivity"],
+  "lang": "es",
   "icons": [
     {
       "src": "/web-app-manifest-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     },
     {
       "src": "/web-app-manifest-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/favicon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png"
     }
   ],
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
-  "display": "standalone"
+  "shortcuts": [
+    {
+      "name": "APKs",
+      "short_name": "APKs",
+      "description": "Aplicaciones de Android",
+      "url": "/main.html#APKs"
+    },
+    {
+      "name": "Programas",
+      "short_name": "Programas",
+      "description": "Aplicaciones para Windows y Linux",
+      "url": "/main.html#Programas"
+    },
+    {
+      "name": "Juegos",
+      "short_name": "Juegos",
+      "description": "Juegos clásicos y ligeros",
+      "url": "/main.html#Juegos"
+    }
+  ]
 }
