--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "FoxWeb",
   "description": "Descarga software, APKs, juegos y sistemas operativos. Enlaces directos y seguros.",
   "start_url": "/",
-  
+  "scope": "/",
   "display": "standalone",
   "theme_color": "#FF4500",
   "background_color": "#0c0c0c",
@@ -12,14 +12,12 @@
     {
       "src": "https://i.imgur.com/qJpo1hb.jpeg",
       "sizes": "192x192",
-      "type": "image/jpeg",
-      "purpose": "any"
+      "type": "image/jpeg"
     },
     {
       "src": "https://i.imgur.com/qJpo1hb.jpeg",
-      "sizes": "512x512", 
-      "type": "image/jpeg",
-      "purpose": "any"
+      "sizes": "512x512",
+      "type": "image/jpeg"
     }
   ],
   
