--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,8 @@
       "dest": "/index.html"
     },
     {
-      "src": "/data.js",
-      "dest": "/data.js"
+      "src": "/",
+      "dest": "/"
     }
   ]
 }
