--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
     {
       "src": "*.js",
       "use": "@vercel/static"
+    },
+    {
+      "src": "*.txt",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
