--- a/vercel.json
+++ b/vercel.json
@@ -36,6 +36,10 @@
     {
       "src": "/(.*)",
       "dest": "/index.html"
+    },
+    {
+      "src": "/chat",
+      "dest": "/chat.html"
     }
   ]
 }
