--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "FoxWeb - Centro de Descargas",
+  "name": "FoxWeb",
   "short_name": "FoxWeb",
   "description": "Centro de descargas confiable con software esencial, sistemas operativos, juegos clásicos y utilidades",
   "start_url": "/",
@@ -9,19 +9,19 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "https://i.imgur.com/qfsMx7V.png",
+      "src": "https://i.imgur.com/TGNAk1M.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "https://i.imgur.com/qfsMx7V.png",
+      "src": "https://i.imgur.com/TGNAk1M.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "https://i.imgur.com/qfsMx7V.png",
+      "src": "https://i.imgur.com/TGNAk1M.png",
       "sizes": "144x144",
       "type": "image/png"
     }
