--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
       "source": "/(.*)",
       "headers": [
         {
+          "key": "X-Robots-Tag",
+          "value": "all"
+        },
+        {
           "key": "Cloudflare-CDN-Cache-Control",
           "value": "max-age=31536000"
         },
