--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "headers": [
     {
       "source": "/(.*)",
@@ -8,18 +9,41 @@
           "value": "all"
         },
         {
-          "key": "Cloudflare-CDN-Cache-Control",
-          "value": "max-age=31536000"
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
         },
         {
-          "key": "CDN-Cache-Control",
-          "value": "max-age=31536000"
-        },
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, s-maxage=31536000, immutable"
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
         }
       ]
+    },
+    {
+      "source": "/(index.js|index.css|data.js)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/programas",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/apps",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/sistemas",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/juegos",
+      "destination": "/index.html"
     }
   ]
 }
